# MIPT-networked

./: .gitignore  .gitmodules  CMakeLists.txt
w1/: CMakeLists.txt  client.cpp  server.cpp  settings.h  socket_tools.cpp  socket_tools.h
w2/: CMakeLists.txt  client.cpp  lobby.cpp  playerInfo.h  server.cpp  settings.h
w3/: CMakeLists.txt
w4/: BitStream.h  CMakeLists.txt  client.cpp  client.h  client_app.cpp  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h  server_app.cpp
w5/: CyclicBuffer.h  entity.cpp  entity.h  main.cpp  mathUtils.h  protocol.cpp  protocol.h  server.cpp
